@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-04-18T16:27:21Z",
+  "timestamp" : "2022-04-19T01:41:34Z",
   "count_outdated" : 1741,
   "uniques_outdated" : 320,
-  "count" : 1792,
+  "count" : 1793,
   "uniques" : 343,
   "clones" : [
     {
@@ -56,8 +56,8 @@
     },
     {
       "timestamp": "2022-04-18T00:00:00Z",
-      "count": 12,
-      "count_minmax": [ 5, 12 ],
+      "count": 13,
+      "count_minmax": [ 5, 13 ],
       "uniques": 7,
       "uniques_minmax": [ 3, 7 ]
     }
