@@ -1,3 +1,9 @@
+2022-04-19T01:41:34Z:
+* notice: last 14d: all unq: 52 15
+* notice: prev accum: outdated-all outdated-unq / all unq: 1741 320 / 1792 343
+* notice: next accum: outdated-all outdated-unq / all unq: 1741 320 / 1793 343
+* notice: prev json diff // prev day diff: unq all: +0 +1 / -0 -0 // +0 +1 / -0 -0
+
 2022-04-18T16:27:21Z:
 * notice: last 14d: all unq: 51 15
 * notice: prev accum: outdated-all outdated-unq / all unq: 1741 320 / 1785 339
